@@ -1,3 +1,8 @@
+2004-03-16  Mark Kettenis  <kettenis@gnu.org>
+
+	* netbsd-core.c (netbsd_core_file_p) [CORE_FPU_OFFSET]: Remove
+	code.
+
 2004-03-16  Alan Modra  <amodra@bigpond.net.au>
 
 	* elflink.c (elf_link_read_relocs_from_section): Don't use
